objects/NZPost__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>NZPost API Credentials</description>
    <fields>
        <fullName>Client_ID__c</fullName>
        <label>Client ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <label>Client Secret</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Point_Details__c</fullName>
        <label>End Point Details</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>End_Point_Find__c</fullName>
        <label>End Point Find</label>
        <type>Url</type>
    </fields>
    <label>NZPost</label>
</CustomObject>